# FileTransfer

./: .gitignore  CMakeLists.txt  FileTransfer.cpp  README.md  xmake.lua
Include/: TCPcon.hpp
Source/: CMakeLists.txt  CMakeSettings.json  TCPcon.cpp  this mf moves all the btchs.cpp
Source/Include files/: ConManager.hpp  ErrorMF.hpp  FileMF.hpp  argh.h
Source/Source files/: mf dealing w cons.cpp  mf dealing w files.cpp
